<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="10dp"
    android:textSize="@dimen/textSize">

    <EditText
        android:id="@+id/emailRegisterEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:autofillHints="@gmail.com"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/passwordRegisterEditText"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordRegisterEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:autofillHints=""
        app:layout_constraintBottom_toTopOf="@id/registerRegButton"
        app:layout_constraintTop_toBottomOf="@id/emailRegisterEditText" />

    <Button
        android:id="@+id/registerRegButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordRegisterEditText"/>

</androidx.constraintlayout.widget.ConstraintLayout>